* Fixed '#' Breaking posts * Fixed missing posts folder

--- a/theme.css
+++ b/theme.css
@@ -1,3 +1,9 @@
+/*
+MicroTXT - A tiny PHP Textboard Software
+Copyright (c) 2016 Kevin Froman (https://ChaosWebs.net/)
+
+MIT License
+*/
 .center
 {
 	text-align: center;
