--- a/theme.css
+++ b/theme.css
@@ -28,7 +28,7 @@ MIT License
 	margin-right: 15%;
 }
 
-.post
+.post, .deletedPost
 {
 	border: 2px solid black;
 	padding: 1em;
@@ -36,6 +36,10 @@ MIT License
 	margin-right: 15%;
 	margin-bottom: 2em;
 	word-wrap: break-word;
+}
+
+.deletedPost{
+  color: red;
 }
 
 .name
